--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Jason Sarfo</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a young entrepreneurand an aspiring software engineer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was originally born in Kumasi,Ghana which is located in west africa but I spent most of my life in Denver,Colorado</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to workout, make music, draw art,and read my Bible</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be the owner of several succesfull businesses</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Aurora,CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because it is an oppurtunity to push my creative skills and my logic as well because I will constantly need to find new creative ways to solve problems</p>
     </section>
 
     <footer id="footer">
