typo corrections pt2

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <h1>Introduction</h1>
       <p>I am a young entrepreneur and an aspiring software engineer</p>
       <h1>Where I'm From</h1>
-      <p>I was originally born in Kumasi,Ghana which is located in west africa but I spent most of my life in Denver,Colorado</p>
+      <p>I was originally born in Kumasi, Ghana which is located in West Africa but I spent most of my life in Denver,Colorado</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I like to workout, make music, draw art,and read my Bible</p>
+      <p>I like to workout, make music, draw art, and read my Bible</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is to be the owner of several succesfull businesses</p>
+      <p>My dream job is to be the owner of several succesful businesses</p>
       <h1>Where do you live?</h1>
       <p>I currently live in Aurora,CO</p>
       <h1>Why do you want to be a web developer?</h1>
